--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 
 body {
-  background-color: lightgrey;
+  background-color: #F9FBF2;
 }
 h1 {
-  color: green;
+  color: #FFEDE1;
 }
 h3 {
-  color: indigo;
+  color: #AFCBFF;
 }
 h1,
 h3{
@@ -18,5 +18,5 @@ h3{
   font-family: sans-serif;
   margin-left: 35px;
   margin-right: 35px;
-  color: Tomato;
+  color: #0E1C36;
 }
