--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 
 body {
-  background-color: #F9FBF2;
+  background-color: #FFEDE1;
 }
 h1 {
-  color: #FFEDE1;
+  color: #F9FBF2;
 }
 h3 {
   color: #AFCBFF;
