--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h3 {
   padding: 6px 8px 6px 16px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181;
+  color: white;
   display: block;
 }
 
