--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h3 {
   left: 10;
   background-color: #111; /* Black */
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
+  padding: 8px 0;
 }
 
 /* The navigation menu links */
