--- a/style.css
+++ b/style.css
@@ -9,91 +9,52 @@ h3 {
   color: #AFCBFF;
 }
 
-.sidenav {
-  width: 160px; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
-  top: 20; /* Stay at the top */
-  left: 10;
-  background-color: #111; /* Black */
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding: 8px 0;
-}
-
-/* The navigation menu links */
-.sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 25px;
-  color: white;
-  display: block;
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-/* Style page content */
-.main {
-  margin-left: 160px; /* Same as the width of the sidebar */
-  padding: 0px 10px;
-}
-
-.header {
-  overflow: hidden;
+.sidebar {
+  margin: 0;
+  padding: 0;
+  width: 200px;
   background-color: #f1f1f1;
-  padding: 20px 10px;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
 }
 
-/* Style the header links */
-.header a {
-  float: left;
+.sidebar a {
+  display: block;
   color: black;
-  text-align: center;
-  padding: 12px;
+  padding: 16px;
   text-decoration: none;
-  font-size: 18px;
-  line-height: 25px;
-  border-radius: 4px;
 }
-
-/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
-.header a.logo {
-  font-size: 25px;
-  font-weight: bold;
-}
-
-/* Change the background color on mouse-over */
-.header a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Style the active/current link*/
-.header a.active {
-  background-color: dodgerblue;
+ 
+.sidebar a.active {
+  background-color: #04AA6D;
   color: white;
 }
 
-/* Float the link section to the right */
-.header-right {
-  float: right;
+.sidebar a:hover:not(.active) {
+  background-color: #555;
+  color: white;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+div.content {
+  margin-left: 200px;
+  padding: 1px 16px;
+  height: 1000px;
 }
 
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
   }
-  .header-right {
+  .sidebar a {float: left;}
+  div.content {margin-left: 0;}
+}
+
+@media screen and (max-width: 400px) {
+  .sidebar a {
+    text-align: center;
     float: none;
   }
 }
