--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
+
 body {
   background-color: #F9FBF2;
+  font-family: "Nunito";
+  font-size: 22px;
 }
 
 h1 {
