--- a/style.css
+++ b/style.css
@@ -19,14 +19,15 @@ p {
 }
 
 .topnav {
-  background-color: #333;
+  background-color: #0E1C36;
   overflow: hidden;
+  padding-left: 
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: #F9FBF2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -35,12 +36,12 @@ p {
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: #F9FBF2;
   color: black;
 }
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #04AA6D;
-  color: white;
+  background-color: #FFEDE1;
+  color: #AFCBFF;
 }
