--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 
 body {
   background-color: #F9FBF2;
+  background-image: radial-gradient(#FFEDE1 15%, transparent 15%), radial-gradient(#D7F9FF 40%, transparent 40%);
+  background-size:60px 60px;
+  background-position: 0 0, 30px 30px;
   font-family: "Nunito";
   font-size: 22px;
   padding-left: 10%;
